--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
 
 <body>
-  <h1> Quick Cuisine </h1>
+
+    <div class="title">
+        <img src="Assets/Images/quick_cuisine.png" alt="Quick Cuisine :)"></img>
+        
+    </div>
 </body>
 
 </html>
