--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 <body>
 
     <div class="title">
-        <img src="Assets/Images/quick_cuisine.png" alt="Quick Cuisine :)"></img>
-        
+        <img src="Assets/Images/quick_cuisine.png" alt="Quick Cuisine"></img>
     </div>
 
 </body>
