added start and login button

--- a/index.html
+++ b/index.html
@@ -2,14 +2,21 @@
 <html>
 
 <head>
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
   
 <body>
-
     <div class="title">
-        <img src="Assets/Images/quick_cuisine.png" alt="Quick Cuisine"></img>
+        <img src="Assets/Images/quick_cuisine.png" class="logo" alt="Quick Cuisine"></img>
+        <button class="btn-order" href="nextpage.html">
+            <p>Start Order</p>
+        </button>
     </div>
-
-</body>
-  
+    <div class="login">
+        <button class="btn-login" href="login.html">
+            <p>Log in here</p>
+        </button>
+    </div>
+</body>  
 </html>
