added menu page

--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="main.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
   
 <body>
     <div class="title">
         <img src="Assets/Images/quick_cuisine.png" class="logo" alt="Quick Cuisine"></img>
-        <button class="btn-order" href="nextpage.html">
-            <p>Start Order</p>
-        </button>
+        <a class="orderbtn" href="menu.html">
+            <button class="btn-order">
+                <p>Start Order</p>
+            </button>
+        </a>
     </div>
-    <div class="login">
-        <button class="btn-login" href="login.html">
-            <p>Log in here</p>
-        </button>
-    </div>
+    <a class="login" href="menu.html">
+        <img class="btn-login" src="Assets/Images/user-circle-solid.png"></img>
+    </a>
 </body>  
 </html>
