--- a/menu.html
+++ b/menu.html
@@ -4,38 +4,90 @@
 <head>
     <link rel="stylesheet" type="text/css" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/3d46d02806.js"></script>
 </head>
   
 <body>
     <div class="container">
         <nav class="sidebar">
-            <div class="category"><img src="Assets/Images/icon_burger.png"><br>Burger</img></div>
-            <div class="category"><img src="Assets/Images/icon_chicken.png"><br>Chicken</img></div>
-            <div class="category"><img src="Assets/Images/icon_pizza.png"><br>Pizza</img></div>
-            <div class="category"><img src="Assets/Images/icon_fish.png"><br>Fish</img></div>
-            <div class="category"><img src="Assets/Images/icon_icecream.png"><br>Ice Cream</img></div>
+            <a class="icon" href="index.html"> <div class="category"><img src="Assets/Images/icon_burger.png"></img></div> </a>
+            <a class="icon" href="index.html"> <div class="category"><img src="Assets/Images/icon_chicken.png"></img></div></a>
+            <a class="icon" href="index.html"> <div class="category"><img src="Assets/Images/icon_pizza.png"></img></div></a>
+            <a class="icon" href="index.html"> <div class="category"><img src="Assets/Images/icon_fish.png"></img></div></a>
+            <a class="icon" href="index.html"> <div class="category"><img src="Assets/Images/icon_icecream.png"></img></div></a>
         </nav>
         <a class="login" href="menu.html">
-            <img class="btn-login" src="Assets/Images/user-circle-solid.png"></img>
+            <i class="fas fa-user-circle"></i>
+        </a>
+        <a class="cart" href="menu.html">
+            <i class="fas fa-shopping-cart"></i>
+            <!-- XDDDDD-->
         </a>
         <div class="menu" id="burgers">
-            <ul class="items">
-                <li class="item">Dumb thiccc burger</li>
-                <li class="item">Dumbe thicccc burger</li>
-                <li class="item">Dumbee thiccccc burger</li>
-                <li class="item">Dumbeee thicccccc burger</li>
-                <li class="item">Dumbeeee thicccccc burger</li>
-            </ul>
-        </div>
-        <div hidden class="menu" id="fish">
-                <ul class="items">
-                    <li class="item">Dumb thiccc fish</li>
-                    <li class="item">Dumbe thicccc fish</li>
-                    <li class="item">bruh fishr</li>
-                    <li class="item">Dumbeee thicccccc bufniwfrger</li>
-                    <li class="item">Dumbeeee thicccccc bugh8f9hasfr</li>
-                </ul>
+            <div class="items">
+                <div class="item">
+                    Dumb thiccc burger
+                    <button class="btn-customize">Customize</button>
+                    <button class="btn-add">Add to order</button>                 
+                </div>
+                <div class="item">
+                    Dumbe thicccc burger
+                    <button class="btn-customize">Customize</button>
+                    <button class="btn-add">Add to order</button>      
+                </div>
+                <div class="item">
+                    Dumbee thiccccc burger
+                    <button class="btn-customize">Customize</button>
+                    <button class="btn-add">Add to order</button>      
+                </div>
+                <div class="item">
+                    Dumbeee thicccccc burger
+                    <button class="btn-customize">Customize</button>
+                    <button class="btn-add">Add to order</button>      
+                </div>
+                <div class="item">
+                    Dumbeeee thiccccccyyy burger
+                    <button class="btn-customize">Customize</button>
+                    <button class="btn-add">Add to order</button>      
+                </div>
             </div>
+        </div>
+        <div class="menu-hidden" id="fish">
+                <div class="items">
+                    <div class="item">Dumb thiccc fish</div>
+                    <div class="item">Dumbe thicccc fish</div>
+                    <div class="item">bruh fishr</div>
+                    <div class="item">Dumbeee thicccccc bufniwfrger</div>
+                    <div class="item">Dumbeeee thicccccc bugh8f9hasfr</div>
+                </div>
+        </div>
+        <div class="menu-hidden" id="chicken">
+                <div class="items">
+                    <div class="item">Dumb thiccc chicken</div>
+                    <div class="item">Dumbe thicccc chicken</div>
+                    <div class="item">bruh chicken</div>
+                    <div class="item">Dumbeee thicccccc chicken</div>
+                    <div class="item">Dumbeeee thicccccc chicken</div>
+                </div>
+        </div>
+        <div class="menu-hidden" id="pizza">
+                <div class="items">
+                    <div class="item">Dumb thiccc pizza</div>
+                    <div class="item">Dumbe thicccc pizza</div>
+                    <div class="item">bruh pizza</div>
+                    <div class="item">Dumbeee thicccccc pizza</div>
+                    <div class="item">Dumbeeee thicccccc pizza</div>
+                </div>
+        </div>
+        <div class="menu-hidden" id="ice-cream">
+                <div class="items">
+                    <div class="item">Dumb thiccc ice cream</div>
+                    <div class="item">Dumbe thicccc ice cream</div>
+                    <div class="item">bruh ice cream</div>
+                    <div class="item">Dumbeee thicccccc ice cream</div>
+                    <div class="item">Dumbeeee thicccccc ice cream</div>
+                </div>
+        </div>
     </div>
 </body>  
 </html>
