--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
 </head>
   
 <body>
-  <div>
-  <h1> Quick Cuisine </h1>
-  </div>
+
+    <div class="title">
+        <img src="Assets/Images/quick_cuisine.png" alt="Quick Cuisine"></img>
+        
+    </div>
+    
 </body>
   
 </html>
