--- a/menu.html
+++ b/menu.html
@@ -12,19 +12,19 @@
     <div class="container">
         <!-- LEFT sidebar: this contains the food items we can navigate to-->
         <nav class="sidebar">
-            <a class="icon" href="index.html">
+            <a class="icon" href="menu.html">
                 <div class="category"><img src="Assets/Images/icon_burger.png"></img></div>
             </a>
-            <a class="icon" href="index.html">
+            <a class="icon" href="menu.html">
                 <div class="category"><img src="Assets/Images/icon_chicken.png"></img></div>
             </a>
-            <a class="icon" href="index.html">
+            <a class="icon" href="menu.html">
                 <div class="category"><img src="Assets/Images/icon_pizza.png"></img></div>
             </a>
-            <a class="icon" href="index.html">
+            <a class="icon" href="menu.html">
                 <div class="category"><img src="Assets/Images/icon_fish.png"></img></div>
             </a>
-            <a class="icon" href="index.html">
+            <a class="icon" href="menu.html">
                 <div class="category"><img src="Assets/Images/icon_icecream.png"></img></div>
             </a>
         </nav>
@@ -33,8 +33,8 @@
             <div class="items">
                 <div class="item-even">
                     <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/food_placeholder.png"></img>
-                        <p class="item-name">Dumbe thicccc burger</p>
+                        <img class="item-pic" src="Assets/Images/Burger.jpg"></img>
+                        <p class="item-name">Burger 1</p>
                         <button class="btn-customize">Customize</button>
                         <button class="btn-add">Add to order</button>
                         <p class="cals">300 cals</p>
@@ -43,8 +43,8 @@
                 </div>
                 <div class="item-odd">
                     <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/food_placeholder.png"></img>
-                        <p class="item-name">Dumbe thicccc burger</p>
+                        <img class="item-pic" src="Assets/Images/Burger.jpg"></img>
+                        <p class="item-name">Burger 2</p>
                         <button class="btn-customize">Customize</button>
                         <button class="btn-add">Add to order</button>
                         <p class="cals">400 cals</p>
@@ -54,8 +54,8 @@
                 </div>
                 <div class="item-even">
                     <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/food_placeholder.png"></img>
-                        <p class="item-name">Dumbe thicccc burger</p>
+                        <img class="item-pic" src="Assets/Images/Burger.jpg"></img>
+                        <p class="item-name">Burger 3</p>
                         <button class="btn-customize">Customize</button>
                         <button class="btn-add">Add to order</button>
                         <p class="cals">600 cals</p>
@@ -64,8 +64,8 @@
                 </div>
                 <div class="item-odd">
                     <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/food_placeholder.png"></img>
-                        <p class="item-name">Dumbe thicccc burger</p>
+                        <img class="item-pic" src="Assets/Images/Burger.jpg"></img>
+                        <p class="item-name">Burger 4</p>
                         <button class="btn-customize">Customize</button>
                         <button class="btn-add">Add to order</button>
                         <p class="cals">670 cals</p>
@@ -74,8 +74,8 @@
                 </div>
                 <div class="item-even">
                     <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/food_placeholder.png"></img>
-                        <p class="item-name">Dumbe thicccc burger</p>
+                        <img class="item-pic" src="Assets/Images/Burger.jpg"></img>
+                        <p class="item-name">Burger 5</p>
                         <button class="btn-customize">Customize</button>
                         <button class="btn-add">Add to order</button>
                         <p class="cals">690 cals</p>
