--- a/index.html
+++ b/index.html
@@ -20,4 +20,5 @@
         <i class="fas fa-user-circle"></i>
     </a>
 </body>  
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </html>
