--- a/menu.html
+++ b/menu.html
@@ -25,299 +25,43 @@
                 <div class="category"><img src="Assets/Images/icon_fish.png"></img></div>
             </a>
             <a class="icon" id="icecream-icon">
-                <div class="category"><img src="Assets/Images/icon_icecream.png"></img></div>
+                <div class="category"><img src="Assets/Images/icon_dessert.png"></img></div>
             </a>
         </nav>
 
-        <!-- The burgers menu (the default menu) -->
-        <div class="menu" id="burgers">
-            <div class="items">
-                <div class="item-even">
-                    <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/Burger.jpg"></img>
-                        <p class="item-name">Burger 1</p>
-                        <button class="btn-customize" onclick="window.location.href='customize.html'">
-                            Customize</button>
-                        <button class="btn-add">Add to order</button>
-                        <p class="cals">300 cals</p>
-                        <p class="price">$5.00</p>
-                    </div>
-                </div>
-                <div class="item-odd">
-                    <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/Burger.jpg"></img>
-                        <p class="item-name">Burger 2</p>
-                        <button class="btn-customize" onclick="window.location.href='customize.html'">
-                            Customize</button>
-                        <button class="btn-add">Add to order</button>
-                        <p class="cals">400 cals</p>
-                        <p class="price">$4.20</p>
-
-                    </div>
-                </div>
-                <div class="item-even">
-                    <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/Burger.jpg"></img>
-                        <p class="item-name">Burger 3</p>
-                        <button class="btn-customize" onclick="window.location.href='customize.html'">
-                            Customize</button>
-                        <button class="btn-add">Add to order</button>
-                        <p class="cals">600 cals</p>
-                        <p class="price">$6.00</p>
-                    </div>
-                </div>
-                <div class="item-odd">
-                    <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/Burger.jpg"></img>
-                        <p class="item-name">Burger 4</p>
-                        <button class="btn-customize" onclick="window.location.href='customize.html'">
-                            Customize</button>
-                        <button class="btn-add">Add to order</button>
-                        <p class="cals">670 cals</p>
-                        <p class="price">$4.70</p>
-                    </div>
-                </div>
-                <div class="item-even">
-                    <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/Burger.jpg"></img>
-                        <p class="item-name">Burger 5</p>
-                        <button class="btn-customize" onclick="window.location.href='customize.html'">
-                            Customize</button>
-                        <button class="btn-add">Add to order</button>
-                        <p class="cals">690 cals</p>
-                        <p class="price">$4.50</p>
-
-                    </div>
-                </div>
+        <div class="menu-container">
+            <div class="menu-row">
+                <img src="Assets/Images/Burger.jpg" alt="Burger" class ="food-item"> </img>
+                Burger
             </div>
-        </div>
-
-        <!-- The chicken menu-->
-        <div class="menu hidden" id="chicken">
-            <div class="items">
-                <div class="item-even">
-                    <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/Chicken.jpg"></img>
-                        <p class="item-name">Chicken 1</p>
-                        <button class="btn-customize">Customize</button>
-                        <button class="btn-add">Add to order</button>
-                        <p class="cals">300 cals</p>
-                        <p class="price">$5.00</p>
-                    </div>
-                </div>
-                <div class="item-odd">
-                    <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/Chicken.jpg"></img>
-                        <p class="item-name">Chicken 2</p>
-                        <button class="btn-customize">Customize</button>
-                        <button class="btn-add">Add to order</button>
-                        <p class="cals">400 cals</p>
-                        <p class="price">$4.20</p>
-
-                    </div>
-                </div>
-                <div class="item-even">
-                    <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/Chicken.jpg"></img>
-                        <p class="item-name">Chicken 3</p>
-                        <button class="btn-customize" href="customize.html">Customize</button>
-                        <button class="btn-add">Add to order</button>
-                        <p class="cals">600 cals</p>
-                        <p class="price">$6.00</p>
-                    </div>
-                </div>
-                <div class="item-odd">
-                    <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/Chicken.jpg"></img>
-                        <p class="item-name">Chicken 4</p>
-                        <button class="btn-customize">Customize</button>
-                        <button class="btn-add">Add to order</button>
-                        <p class="cals">670 cals</p>
-                        <p class="price">$4.70</p>
-                    </div>
-                </div>
-                <div class="item-even">
-                    <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/Chicken.jpg"></img>
-                        <p class="item-name">Chicken 5</p>
-                        <button class="btn-customize">Customize</button>
-                        <button class="btn-add">Add to order</button>
-                        <p class="cals">690 cals</p>
-                        <p class="price">$4.50</p>
-
-                    </div>
-                </div>
+            <div class="menu-row">
+                    <img src="Assets/Images/Burger.jpg" alt="Burger" class ="food-item"> </img>
+                    Burger
             </div>
-
-        </div>
-        <!-- The pizza menu -->
-        <div class="menu hidden" id="pizza">
-            <div class="items">
-                <div class="item-even">
-                    <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/Pizza.jpg"></img>
-                        <p class="item-name">Pizza 1</p>
-                        <button class="btn-customize">Customize</button>
-                        <button class="btn-add">Add to order</button>
-                        <p class="cals">300 cals</p>
-                        <p class="price">$5.00</p>
-                    </div>
-                </div>
-                <div class="item-odd">
-                    <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/Pizza.jpg"></img>
-                        <p class="item-name">Pizza 2</p>
-                        <button class="btn-customize">Customize</button>
-                        <button class="btn-add">Add to order</button>
-                        <p class="cals">400 cals</p>
-                        <p class="price">$4.20</p>
-
-                    </div>
-                </div>
-                <div class="item-even">
-                    <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/Pizza.jpg"></img>
-                        <p class="item-name">Pizza 3</p>
-                        <button class="btn-customize" href="customize.html">Customize</button>
-                        <button class="btn-add">Add to order</button>
-                        <p class="cals">600 cals</p>
-                        <p class="price">$6.00</p>
-                    </div>
-                </div>
-                <div class="item-odd">
-                    <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/Pizza.jpg"></img>
-                        <p class="item-name">Pizza 4</p>
-                        <button class="btn-customize">Customize</button>
-                        <button class="btn-add">Add to order</button>
-                        <p class="cals">670 cals</p>
-                        <p class="price">$4.70</p>
-                    </div>
-                </div>
-                <div class="item-even">
-                    <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/Pizza.jpg"></img>
-                        <p class="item-name">Pizza 5</p>
-                        <button class="btn-customize">Customize</button>
-                        <button class="btn-add">Add to order</button>
-                        <p class="cals">690 cals</p>
-                        <p class="price">$4.50</p>
-                    </div>
-                </div>
+            <div class="menu-row">
+                    <img src="Assets/Images/Burger.jpg" alt="Burger" class ="food-item"> </img>
+                    Burger
             </div>
-        </div>
-        <!-- The fish menu-->
-        <div class="menu hidden" id="fish">
-            <div class="items">
-                <div class="item-even">
-                    <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/Fish.jpg"></img>
-                        <p class="item-name">Fish 1</p>
-                        <button class="btn-customize">Customize</button>
-                        <button class="btn-add">Add to order</button>
-                        <p class="cals">300 cals</p>
-                        <p class="price">$5.00</p>
-                    </div>
-                </div>
-                <div class="item-odd">
-                    <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/Fish.jpg"></img>
-                        <p class="item-name">Fish 2</p>
-                        <button class="btn-customize">Customize</button>
-                        <button class="btn-add">Add to order</button>
-                        <p class="cals">400 cals</p>
-                        <p class="price">$4.20</p>
-
-                    </div>
-                </div>
-                <div class="item-even">
-                    <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/Fish.jpg"></img>
-                        <p class="item-name">Fish 3</p>
-                        <button class="btn-customize" href="customize.html">Customize</button>
-                        <button class="btn-add">Add to order</button>
-                        <p class="cals">600 cals</p>
-                        <p class="price">$6.00</p>
-                    </div>
-                </div>
-                <div class="item-odd">
-                    <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/Fish.jpg"></img>
-                        <p class="item-name">Fish 4</p>
-                        <button class="btn-customize">Customize</button>
-                        <button class="btn-add">Add to order</button>
-                        <p class="cals">670 cals</p>
-                        <p class="price">$4.70</p>
-                    </div>
-                </div>
-                <div class="item-even">
-                    <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/Fish.jpg"></img>
-                        <p class="item-name">Fish 5</p>
-                        <button class="btn-customize">Customize</button>
-                        <button class="btn-add">Add to order</button>
-                        <p class="cals">690 cals</p>
-                        <p class="price">$4.50</p>
-                    </div>
-                </div>
+            <div class="menu-row">
+                    <img src="Assets/Images/Burger.jpg" alt="Burger" class ="food-item"> </img>
+                    Burger
             </div>
-        </div>
-        <!-- The icecream menu-->
-        <div class="menu hidden" id="icecream">
-            <div class="items">
-                <div class="item-even">
-                    <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/IceCream.jpg"></img>
-                        <p class="item-name">Ice Cream 1</p>
-                        <button class="btn-customize">Customize</button>
-                        <button class="btn-add">Add to order</button>
-                        <p class="cals">300 cals</p>
-                        <p class="price">$5.00</p>
-                    </div>
-                </div>
-                <div class="item-odd">
-                    <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/IceCream.jpg"></img>
-                        <p class="item-name">Ice Cream 2</p>
-                        <button class="btn-customize">Customize</button>
-                        <button class="btn-add">Add to order</button>
-                        <p class="cals">400 cals</p>
-                        <p class="price">$4.20</p>
-
-                    </div>
-                </div>
-                <div class="item-even">
-                    <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/IceCream.jpg"></img>
-                        <p class="item-name">Ice Cream 3</p>
-                        <button class="btn-customize" href="customize.html">Customize</button>
-                        <button class="btn-add">Add to order</button>
-                        <p class="cals">600 cals</p>
-                        <p class="price">$6.00</p>
-                    </div>
-                </div>
-                <div class="item-odd">
-                    <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/IceCream.jpg"></img>
-                        <p class="item-name">Ice Cream 4</p>
-                        <button class="btn-customize">Customize</button>
-                        <button class="btn-add">Add to order</button>
-                        <p class="cals">670 cals</p>
-                        <p class="price">$4.70</p>
-                    </div>
-                </div>
-                <div class="item-even">
-                    <div class="grid-container">
-                        <img class="item-pic" src="Assets/Images/IceCream.jpg"></img>
-                        <p class="item-name">Ice Cream 5</p>
-                        <button class="btn-customize">Customize</button>
-                        <button class="btn-add">Add to order</button>
-                        <p class="cals">690 cals</p>
-                        <p class="price">$4.50</p>
-
-                    </div>
-                </div>
+            <div class="menu-row">
+                    <img src="Assets/Images/Burger.jpg" alt="Burger" class ="food-item"> </img>
+                    Burger 
             </div>
+            <div class="menu-row">
+                    <img src="Assets/Images/Burger.jpg" alt="Burger" class ="food-item"> </img>
+                    Burger
+            </div>
+            <div class="menu-row">
+                    <img src="Assets/Images/Burger.jpg" alt="Burger" class ="food-item"> </img>
+                    Burger
+             </div>
+             <div class="menu-row">
+                    <img src="Assets/Images/Burger.jpg" alt="Burger" class ="food-item"> </img>
+                    Burger
+                </div>
         </div>
         <!-- RIGHT sidebar: login and checkout-->
         <nav class="sidebar">
