--- a/menu.html
+++ b/menu.html
@@ -32,36 +32,27 @@
         <div class="menu-container">
             <div class="menu-row">
                 <img src="Assets/Images/Burger.jpg" alt="Burger" class ="food-item"> </img>
-                Burger
+                <h1 class = "row-title"> Burger 1 </h1>
             </div>
             <div class="menu-row">
                     <img src="Assets/Images/Burger.jpg" alt="Burger" class ="food-item"> </img>
-                    Burger
+                    <h1 class = "row-title"> Burger 2 </h1>
             </div>
             <div class="menu-row">
                     <img src="Assets/Images/Burger.jpg" alt="Burger" class ="food-item"> </img>
-                    Burger
+                    <h1 class = "row-title"> Burger 3 </h1>
             </div>
             <div class="menu-row">
                     <img src="Assets/Images/Burger.jpg" alt="Burger" class ="food-item"> </img>
-                    Burger
+                    <h1 class = "row-title"> Burger 4 </h1>
+                    <h1 class = "row-title"> Burger 4 </h1>
             </div>
             <div class="menu-row">
                     <img src="Assets/Images/Burger.jpg" alt="Burger" class ="food-item"> </img>
-                    Burger 
+                    <h1 class = "row-title"> Burger 5 </h1>
+                    <h2 class = "row-cost_cal"> 300 cal </h2>
             </div>
-            <div class="menu-row">
-                    <img src="Assets/Images/Burger.jpg" alt="Burger" class ="food-item"> </img>
-                    Burger
-            </div>
-            <div class="menu-row">
-                    <img src="Assets/Images/Burger.jpg" alt="Burger" class ="food-item"> </img>
-                    Burger
-             </div>
-             <div class="menu-row">
-                    <img src="Assets/Images/Burger.jpg" alt="Burger" class ="food-item"> </img>
-                    Burger
-                </div>
+
         </div>
         <!-- RIGHT sidebar: login and checkout-->
         <nav class="sidebar">
