created working food groups

--- a/menu.html
+++ b/menu.html
@@ -30,29 +30,76 @@
         </nav>
 
         <div class="menu-container">
-            <div class="menu-row">
-                <img src="Assets/Images/Burger.jpg" alt="Burger" class ="food-item"> </img>
-                <h1 class = "row-title"> Burger 1 </h1>
+            <div class="menu-row" style="background-color: rgb(230,230,230);">
+                <img src="Assets/Images/Burger.jpg" alt="Burger" class="food-item"> </img>
+                <div class="row-text">
+                    <h1 class="row-title"> Burger 1 </h1>
+                    <div class="food-groups">
+                            <img src="Assets/Images/group_dairy.png" class= "food-group-item"></img>
+                            <img src="Assets/Images/group_vegetable.png" class= "food-group-item"></img>
+                            <img src="Assets/Images/group_meat.png" class= "food-group-item"></img>
+                            <img src="Assets/Images/group_peanut.png" class= "food-group-item"></img>
+                            <img src="Assets/Images/group_wheat.png" class= "food-group-item"></img>
+                        </div>
+                        <p class ="calorie"> 500 cal</p>
+                </div>
             </div>
             <div class="menu-row">
-                    <img src="Assets/Images/Burger.jpg" alt="Burger" class ="food-item"> </img>
-                    <h1 class = "row-title"> Burger 2 </h1>
+                <img src="Assets/Images/Burger.jpg" alt="Burger" class="food-item"> </img>
+                <div class="row-text">
+                    <h1 class="row-title"> Burger 2 </h1>
+                    <div class="food-groups">
+                            <img src="Assets/Images/group_dairy.png" class= "food-group-item"></img>
+                            <img src="Assets/Images/group_vegetable.png" class= "food-group-item"></img>
+                            <img src="Assets/Images/group_meat.png" class= "food-group-item"></img>
+                            <img src="Assets/Images/group_peanut.png" class= "food-group-item"></img>
+                            <img src="Assets/Images/group_wheat.png" class= "food-group-item"></img>
+                        </div>
+                        <p class ="calorie"> 500 cal</p>
+                </div>
+            </div>
+            <div class="menu-row" style="background-color: rgb(230,230,230);">
+                <img src="Assets/Images/Burger.jpg" alt="Burger" class="food-item"> </img>
+                <div class="row-text">
+                    <h1 class="row-title"> Burger 3 </h1>
+                    <div class="food-groups">
+                            <img src="Assets/Images/group_dairy.png" class= "food-group-item"></img>
+                            <img src="Assets/Images/group_vegetable.png" class= "food-group-item"></img>
+                            <img src="Assets/Images/group_meat.png" class= "food-group-item"></img>
+                            <img src="Assets/Images/group_peanut.png" class= "food-group-item"></img>
+                            <img src="Assets/Images/group_wheat.png" class= "food-group-item"></img>
+                        </div>
+                        <p class ="calorie"> 500 cal</p>
+                </div>
             </div>
             <div class="menu-row">
-                    <img src="Assets/Images/Burger.jpg" alt="Burger" class ="food-item"> </img>
-                    <h1 class = "row-title"> Burger 3 </h1>
+                <img src="Assets/Images/Burger.jpg" alt="Burger" class="food-item"> </img>
+                <div class="row-text">
+                    <h1 class="row-title"> Burger 4 </h1>
+                    <div class="food-groups">
+                            <img src="Assets/Images/group_dairy.png" class= "food-group-item"></img>
+                            <img src="Assets/Images/group_vegetable.png" class= "food-group-item"></img>
+                            <img src="Assets/Images/group_meat.png" class= "food-group-item"></img>
+                            <img src="Assets/Images/group_peanut.png" class= "food-group-item"></img>
+                            <img src="Assets/Images/group_wheat.png" class= "food-group-item"></img>
+                        </div>
+                        <p class ="calorie"> 500 cal</p>
+                </div>
             </div>
-            <div class="menu-row">
-                    <img src="Assets/Images/Burger.jpg" alt="Burger" class ="food-item"> </img>
-                    <h1 class = "row-title"> Burger 4 </h1>
-                    <h1 class = "row-title"> Burger 4 </h1>
+            <div class="menu-row" style="background-color: rgb(230,230,230);">
+                <img src="Assets/Images/Burger.jpg" alt="Burger" class="food-item"> </img>
+                <div class="row-text">
+                    <h1 class="row-title"> Burger 5 </h1>
+                    <div class="food-groups">
+                        <img src="Assets/Images/group_dairy.png" class= "food-group-item"></img>
+                        <img src="Assets/Images/group_vegetable.png" class= "food-group-item"></img>
+                        <img src="Assets/Images/group_meat.png" class= "food-group-item"></img>
+                        <img src="Assets/Images/group_peanut.png" class= "food-group-item"></img>
+                        <img src="Assets/Images/group_wheat.png" class= "food-group-item"></img>
+                    </div>
+                    <p class ="calorie"> 500 cal</p>
+                </div>
             </div>
-            <div class="menu-row">
-                    <img src="Assets/Images/Burger.jpg" alt="Burger" class ="food-item"> </img>
-                    <h1 class = "row-title"> Burger 5 </h1>
-                    <h2 class = "row-cost_cal"> 300 cal </h2>
-            </div>
-
         </div>
         <!-- RIGHT sidebar: login and checkout-->
         <nav class="sidebar">
