added scrollable menu

--- a/menu.html
+++ b/menu.html
@@ -30,74 +30,106 @@
         </nav>
 
         <div class="menu-container">
-            <div class="menu-row" style="background-color: rgb(230,230,230);">
+            <div class="menu-row" style="background-color: rgb(70,70,70);">
                 <img src="Assets/Images/Burger.jpg" alt="Burger" class="food-item"> </img>
                 <div class="row-text">
-                    <h1 class="row-title"> Burger 1 </h1>
+                    <h1 class="row-title"> Big Burger</h1>
                     <div class="food-groups">
-                            <img src="Assets/Images/group_dairy.png" class= "food-group-item"></img>
-                            <img src="Assets/Images/group_vegetable.png" class= "food-group-item"></img>
-                            <img src="Assets/Images/group_meat.png" class= "food-group-item"></img>
-                            <img src="Assets/Images/group_peanut.png" class= "food-group-item"></img>
-                            <img src="Assets/Images/group_wheat.png" class= "food-group-item"></img>
-                        </div>
-                        <p class ="calorie"> 500 cal</p>
-                </div>
-            </div>
-            <div class="menu-row">
-                <img src="Assets/Images/Burger.jpg" alt="Burger" class="food-item"> </img>
-                <div class="row-text">
-                    <h1 class="row-title"> Burger 2 </h1>
-                    <div class="food-groups">
-                            <img src="Assets/Images/group_dairy.png" class= "food-group-item"></img>
-                            <img src="Assets/Images/group_vegetable.png" class= "food-group-item"></img>
-                            <img src="Assets/Images/group_meat.png" class= "food-group-item"></img>
-                            <img src="Assets/Images/group_peanut.png" class= "food-group-item"></img>
-                            <img src="Assets/Images/group_wheat.png" class= "food-group-item"></img>
-                        </div>
-                        <p class ="calorie"> 500 cal</p>
-                </div>
-            </div>
-            <div class="menu-row" style="background-color: rgb(230,230,230);">
-                <img src="Assets/Images/Burger.jpg" alt="Burger" class="food-item"> </img>
-                <div class="row-text">
-                    <h1 class="row-title"> Burger 3 </h1>
-                    <div class="food-groups">
-                            <img src="Assets/Images/group_dairy.png" class= "food-group-item"></img>
-                            <img src="Assets/Images/group_vegetable.png" class= "food-group-item"></img>
-                            <img src="Assets/Images/group_meat.png" class= "food-group-item"></img>
-                            <img src="Assets/Images/group_peanut.png" class= "food-group-item"></img>
-                            <img src="Assets/Images/group_wheat.png" class= "food-group-item"></img>
-                        </div>
-                        <p class ="calorie"> 500 cal</p>
-                </div>
-            </div>
-            <div class="menu-row">
-                <img src="Assets/Images/Burger.jpg" alt="Burger" class="food-item"> </img>
-                <div class="row-text">
-                    <h1 class="row-title"> Burger 4 </h1>
-                    <div class="food-groups">
-                            <img src="Assets/Images/group_dairy.png" class= "food-group-item"></img>
-                            <img src="Assets/Images/group_vegetable.png" class= "food-group-item"></img>
-                            <img src="Assets/Images/group_meat.png" class= "food-group-item"></img>
-                            <img src="Assets/Images/group_peanut.png" class= "food-group-item"></img>
-                            <img src="Assets/Images/group_wheat.png" class= "food-group-item"></img>
-                        </div>
-                        <p class ="calorie"> 500 cal</p>
-                </div>
-            </div>
-            <div class="menu-row" style="background-color: rgb(230,230,230);">
-                <img src="Assets/Images/Burger.jpg" alt="Burger" class="food-item"> </img>
-                <div class="row-text">
-                    <h1 class="row-title"> Burger 5 </h1>
-                    <div class="food-groups">
-                        <img src="Assets/Images/group_dairy.png" class= "food-group-item"></img>
-                        <img src="Assets/Images/group_vegetable.png" class= "food-group-item"></img>
-                        <img src="Assets/Images/group_meat.png" class= "food-group-item"></img>
-                        <img src="Assets/Images/group_peanut.png" class= "food-group-item"></img>
-                        <img src="Assets/Images/group_wheat.png" class= "food-group-item"></img>
+                        <img src="Assets/Images/group_dairy.png" class="food-group-item"></img>
+                        <img src="Assets/Images/group_vegetable.png" class="food-group-item"></img>
+                        <img src="Assets/Images/group_meat.png" class="food-group-item"></img>
+                        <img src="Assets/Images/group_peanut.png" class="food-group-item"></img>
+                        <img src="Assets/Images/group_wheat.png" class="food-group-item"></img>
                     </div>
-                    <p class ="calorie"> 500 cal</p>
+                    <p class="calorie"> 993 cal</p>
+                </div>
+                <div class="row-buttons">
+
+                </div>
+            </div>
+            <div class="menu-row" style="background-color: rgb(30,30,30);">
+                <img src="Assets/Images/Burger.jpg" alt="Burger" class="food-item"> </img>
+                <div class="row-text">
+                    <h1 class="row-title"> Slightly Smaller Burger </h1>
+                    <div class="food-groups">
+                        <img src="Assets/Images/group_dairy.png" class="food-group-item"></img>
+                        <img src="Assets/Images/group_vegetable.png" class="food-group-item"></img>
+                        <img src="Assets/Images/group_meat.png" class="food-group-item"></img>
+                        <img src="Assets/Images/group_peanut.png" class="food-group-item"></img>
+                        <img src="Assets/Images/group_wheat.png" class="food-group-item"></img>
+                    </div>
+                    <p class="calorie"> 750 cal</p>
+                </div>
+            </div>
+            <div class="menu-row" style="background-color: rgb(70,70,70);">
+                <img src="Assets/Images/Burger.jpg" alt="Burger" class="food-item"> </img>
+                <div class="row-text">
+                    <h1 class="row-title"> Double Burg</h1>
+                    <div class="food-groups">
+                        <img src="Assets/Images/group_dairy.png" class="food-group-item"></img>
+                        <img src="Assets/Images/group_vegetable.png" class="food-group-item"></img>
+                        <img src="Assets/Images/group_meat.png" class="food-group-item"></img>
+                        <img src="Assets/Images/group_peanut.png" class="food-group-item"></img>
+                        <img src="Assets/Images/group_wheat.png" class="food-group-item"></img>
+                    </div>
+                    <p class="calorie"> 800 cal</p>
+                </div>
+            </div>
+            <div class="menu-row" style="background-color: rgb(30,30,30);">
+                <img src="Assets/Images/Burger.jpg" alt="Burger" class="food-item"> </img>
+                <div class="row-text">
+                    <h1 class="row-title"> The 'Burger'ler </h1>
+                    <div class="food-groups">
+                        <img src="Assets/Images/group_dairy.png" class="food-group-item"></img>
+                        <img src="Assets/Images/group_vegetable.png" class="food-group-item"></img>
+                        <img src="Assets/Images/group_meat.png" class="food-group-item"></img>
+                        <img src="Assets/Images/group_peanut.png" class="food-group-item"></img>
+                        <img src="Assets/Images/group_wheat.png" class="food-group-item"></img>
+                    </div>
+                    <p class="calorie"> 706 cal</p>
+                </div>
+            </div>
+            <div class="menu-row" style="background-color: rgb(70,70,70);">
+                <img src="Assets/Images/Burger.jpg" alt="Burger" class="food-item"> </img>
+                <div class="row-text">
+                    <h1 class="row-title"> Mermaid Man and Burger Boy </h1>
+                    <div class="food-groups">
+                        <img src="Assets/Images/group_dairy.png" class="food-group-item"></img>
+                        <img src="Assets/Images/group_vegetable.png" class="food-group-item"></img>
+                        <img src="Assets/Images/group_meat.png" class="food-group-item"></img>
+                        <img src="Assets/Images/group_peanut.png" class="food-group-item"></img>
+                        <img src="Assets/Images/group_wheat.png" class="food-group-item"></img>
+                    </div>
+                    <p class="calorie"> 1000 cal</p>
+                </div>
+
+            </div>
+            <div class="menu-row" style="background-color: rgb(30,30,30);">
+                <img src="Assets/Images/Burger.jpg" alt="Burger" class="food-item"> </img>
+                <div class="row-text">
+                    <h1 class="row-title"> Booger </h1>
+                    <div class="food-groups">
+                        <img src="Assets/Images/group_dairy.png" class="food-group-item"></img>
+                        <img src="Assets/Images/group_vegetable.png" class="food-group-item"></img>
+                        <img src="Assets/Images/group_meat.png" class="food-group-item"></img>
+                        <img src="Assets/Images/group_peanut.png" class="food-group-item"></img>
+                        <img src="Assets/Images/group_wheat.png" class="food-group-item"></img>
+                    </div>
+                    <p class="calorie"> 75 cal</p>
+                </div>
+            </div>
+            <div class="menu-row" style="background-color: rgb(70,70,70);">
+                <img src="Assets/Images/Burger.jpg" alt="Burger" class="food-item"> </img>
+                <div class="row-text">
+                    <h1 class="row-title"> xD Burger xD </h1>
+                    <div class="food-groups">
+                        <img src="Assets/Images/group_dairy.png" class="food-group-item"></img>
+                        <img src="Assets/Images/group_vegetable.png" class="food-group-item"></img>
+                        <img src="Assets/Images/group_meat.png" class="food-group-item"></img>
+                        <img src="Assets/Images/group_peanut.png" class="food-group-item"></img>
+                        <img src="Assets/Images/group_wheat.png" class="food-group-item"></img>
+                    </div>
+                    <p class="calorie"> 500 cal</p>
                 </div>
             </div>
         </div>
