added customize and add buttons

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="title">
         <img src="Assets/Images/quick_cuisine.png" class="logo" alt="Quick Cuisine"></img>
         <a class="orderbtn" href="menu.html">
-            <button class="btn-order">
+            <button class="btn-add">
                 <p>Start Order</p>
             </button>
         </a>
