updated css file

--- a/checkout.html
+++ b/checkout.html
@@ -1,1 +1,9 @@
 <h1>Checkout</h1>
+<div class="container">
+    <div class="Cart">
+
+    </div>
+    <div class="Totals">
+        
+    </div>
+</div>
