added customize screen

--- a/checkout.html
+++ b/checkout.html
@@ -1,4 +1,4 @@
-<!doctype html>
+5<!doctype html>
 <html>
 
 <head>
@@ -13,8 +13,12 @@
 
     </div>
     <div class="Totals">
-        
+        <h1 id="subtotal">Subtotal: $0.00</h1>
+        <h1 id="tax">Tax: $0.00</h1>
+        <h1 id="total">Total: $0.00</h1>
+        <h1 id="total-cals">Cals: 0 kcal</h1>
     </div>
 </div>
 </body>
+<script src="checkout.js"></script>
 </html>
