--- a/customize.html
+++ b/customize.html
@@ -2,70 +2,89 @@
 <html>
 
 <head>
-        <link rel="stylesheet" type="text/css" href="main.css">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/3d46d02806.js"></script>
+	<link rel="stylesheet" type="text/css" href="main.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/3d46d02806.js"></script>
 </head>
 
 <body>
-        <div class="customize-grid">
-                <div class="title-item">
-                        Title
-                </div>
-                <div class="image-item">
-                        <img src="Assets/Images/Burger.jpg" width="40%"></img>
-                </div>
-                <div class="custom-button-item1">
-                        Ketchup
-                        <button class="customize-add-remove"> - </button>
-                        1
-                        <button class="customize-add-remove"> + </button>
+	<!-- the entire page -->
+	<div class="container">
+		<nav class="sidebar">
+			<a class="cart" href="menu.html">
+				<i class="fas fa-arrow-circle-left"></i>
+			</a>
 
-                </div>
-                <div class="custom-button-item2">
-                        Mustard
-                        <button class="customize-add-remove"> - </button>
-                        1
-                        <button class="customize-add-remove"> + </button>
-                        <img src="Assets/Images/lettuce.png" width="40%"></img>
-                </div>
-                <div class="custom-button-item3">
-                        Pickles
-                        <button class="customize-add-remove"> - </button>
-                        1
-                        <button class="customize-add-remove"> + </button>
+		</nav>
 
-                </div>
-                <div class="custom-button-item4">
-                        Lettuce
-                        <button class="customize-add-remove"> - </button>
-                        1
-                        <button class="customize-add-remove"> + </button>
-                        <img src="Assets/Images/lettuce.png" width="40%"></img>
-                </div>
-                <div class="custom-button-item5">
-                        Tomato
-                        <button class="customize-add-remove"> - </button>
-                        1
-                        <button class="customize-add-remove"> + </button>
-                        <img src="Assets/Images/tomato.jpg" width="40%"></img>
-                </div>
-                <div class="custom-button-item6">
-                        Bacon
-                        <button class="customize-add-remove"> - </button>
-                        1
-                        <button class="customize-add-remove"> + </button>
+		<div class="customize-container">
 
-                </div>
-                <div class="back-item">
-                        <button class="customize-add-remove" onclick="window.location.href='menu.html'"> &lt Back
-                        </button>
-                </div>
-                <div class="done-item">
-                        <button class="customize-add-remove" onclick="window.location.href='menu.html'"> Done &gt
-                        </button>
-                </div>
-        </div>
+			<div class="customize-row">
+				<a>
+					<img src="Assets/Images/Buttons/button_minus.png" class="btn-customize">
+				</a>
+				<img src="Assets/Images/Customize/split_bun.png" class="customize-row-image">
+				<a>
+					<img src="Assets/Images/Buttons/button_plus.png" class="btn-customize">
+				</a>
+			</div>
+			<div class="customize-row">
+				<a>
+					<img src="Assets/Images/Buttons/button_minus.png" class="btn-customize">
+				</a>
+				<img src="Assets/Images/Customize/split_tomato.png" class="customize-row-image">
+				<a>
+					<img src="Assets/Images/Buttons/button_plus.png" class="btn-customize">
+				</a>
+			</div>
+			<div class="customize-row">
+				<a>
+					<img src="Assets/Images/Buttons/button_minus.png" class="btn-customize">
+				</a>
+				<img src="Assets/Images/Customize/split_cheese.png" class="customize-row-image">
+				<a>
+					<img src="Assets/Images/Buttons/button_plus.png" class="btn-customize">
+				</a>
+			</div>
+			<div class="customize-row">
+				<a>
+					<img src="Assets/Images/Buttons/button_minus.png" class="btn-customize">
+				</a>
+				<img src="Assets/Images/Customize/split_meat.png" class="customize-row-image">
+				<a>
+					<img src="Assets/Images/Buttons/button_plus.png" class="btn-customize">
+				</a>
+			</div>
+			<div class="customize-row">
+				<a>
+					<img src="Assets/Images/Buttons/button_minus.png" class="btn-customize">
+				</a>
+				<img src="Assets/Images/Customize/split_bun_bot.png" class="customize-row-image">
+				<a>
+					<img src="Assets/Images/Buttons/button_plus.png" class="btn-customize">
+				</a>
+			</div>
+
+		</div>
+		<nav class="sidebar">
+			<a class="login">
+				<i class="fas fa-user-circle"></i>
+			</a>
+			<a class="cart" href="menu.html">
+				<i class="fas fa-arrow-circle-right"></i>
+			</a>
+		</nav>
+
+
+	</div>
+	</div>
+
+
+
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="events.js"></script>
+<script src="login.js"></script>
+<script src="order.js"></script>
 
 </html>
