--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="title">
         <img src="Assets/Images/quick_cuisine.png" class="logo" alt="Quick Cuisine"></img>
         <a class="orderbtn" href="menu.html">
-            <button class="btn-add">
+            <button class="btn-order">
                 <p>Start Order</p>
             </button>
         </a>
@@ -21,4 +21,5 @@
     </a>
 </body>  
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="reset.js"></script>
 </html>
